# python

./: README.md  angreal.toml
{{ project_slug }}/: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  conftest.py  pyproject.toml  setup.cfg
{{ project_slug }}/.angreal/: init.py  task_build.py  task_clean.py  task_dev.py  task_docs.py  task_lint.py  task_setup.py  task_static.py  task_tests.py
{{ project_slug }}/.github/workflows/: docs.yaml  publish.yaml  test.yaml
{{ project_slug }}/docs/: config.toml
{{ project_slug }}/docs/archetypes/: default.md
{{ project_slug }}/docs/content/: _index.md
{{ project_slug }}/docs/layouts/partials/: logo.html
{{ project_slug }}/src/{{ package_name }}/: __init__.py  __main__.py
{{ project_slug }}/{{ package_name }}/: __init__.py  __main__.py
