[metadata]
name = {{ project_slug }}
version = attr: {{ package_name }}.__version__
url = ""
author = {{ author_name }}
author_email = {{ author_email }}
description = {{ project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
license = ""
classifiers = 
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",

project_urls =
    Homepage=""
    Source Code=""
    Documentation=""

[options]
python_requires = ~=3.7
packages = find:
include_package_data = true
setup_requires = 
    #add setup requirements here
install_requires =
    #add install requirements here
zip_safe=false

[options.entry_points]
console_scripts =
    {{ project_slug }} = {{ package_name}}.__main__:main

[options.extras_require]
dev = 
    mypy[reports]
    pytest
    pytest-cov
    mypy
    black
    pre-commit
    build
    angreal

[options.packages.find]
include =
    {{ package_name }}*

[options.package_data]

[bdist_wheel]
python-tag = py3

[files]
packages = {{ package_name}}

[easy_install]

[tool:pytest]
testpaths = tests
pythonpath = {{ package_name }}
addopts = --tb=short

[flake8]
exclude = venv/*,tox/*,specs/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 119

[isort]
profile = black
multi_line_output = 3
src_paths = ["{{package_name}}", "tests"]


[mypy]
warn_unused_ignores = True
namespace_packages = True
explicit_package_bases = True
pretty = True
show_error_codes = True
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
show_error_context = True
color_output = True



[tool.black]
line-length = 110
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[build-system]
requires = [ "setuptools"]
build-backend = "setuptools.build_meta"





